# SCOPE-Besthackathon

./: .gitignore  DOCUMENTATION.md  ML_IMPLEMENTATION_PLAN.md  ML_IMPLEMENTATION_REPORT.md  README.md  REAL_WORLD_DEPLOYMENT.md
analysis/: analyze_dataset.py  create_presentation.py  create_presentation_fixed.py
analysis/ml/: analyze_dataset.py  analyze_dataset_fixed.py  create_advanced_analytics.py  create_geographic_visualizations.py  create_time_based_visualizations.py  train_ml_model.py  train_ml_model_fixed.py  train_ml_model_with_synthetic_data.py
analysis/ml/models/: best_model_feature_importance.csv  gradient_boosting_model.joblib  label_encoders.joblib  logistic_regression_model.joblib  model_metadata.joblib  model_training_report.md
analysis/ml/visualizations/: advanced_analytics.md  analysis_report.md  dataset_summary.txt  geographic_analysis.md  time_based_analysis.md
analysis/visualizations/: key_insights.txt
claim-routing-api/: ML_ROUTING_DOCUMENTATION.md  pyproject.toml  test_customer_value.py  test_fraud_detection.py  test_installation.py  test_ml_integration.py  test_ml_routing.py  test_nlp.py
claim-routing-api/app/: main.py
claim-routing-api/app/models/: claim.py
claim-routing-api/app/modules/: claim_extractor.py  database.py  ml_routing_engine.py  routing_engine.py  scoring_engine.py
claim-routing-api/app/routers/: claims.py
frontend/: index.html  package-lock.json  package.json  render.yaml  requirements.txt
frontend/public/ml-visualizations/: analysis_report.md  feature_importance.csv
frontend/src/: App.tsx
(+10 files in other folders)
